remove_outliers function

--- a/Henry_workspace/clean_data.ipynb
+++ b/Henry_workspace/clean_data.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import DataPipeline\n",
     "#import model\n",
     "import pandas as pd\n",
-    "from sklearn.impute import KNNImputer"
+    "from sklearn.impute import KNNImputer\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,6 +71,7 @@
     }
    ],
    "source": [
+    "# Imputer\n",
     "df = pd.read_csv(\"../data/Kagg_life_data.csv\")\n",
     "\n",
     "df_floats = df.drop(columns=[\"Country\", \"Status\"])\n",
@@ -86,8 +89,67 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "236\n",
+      "(2674, 22) (2848, 22)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Isolation Forest to remove outliers\n",
+    "\n",
+    "def remove_outliers(self, data: pd.DataFrame, cutoff: float = 0.0) -> pd.DataFrame:\n",
+    "    \"\"\"Remove outliers with an isolation forest\n",
+    "    \n",
+    "    Only numerical data is modified. All NaNs must already be removed.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "        data  (pd.DataFrame): dataframe to alter\n",
+    "        cutoff (float): Cutoff for anomaly scores. Typically, anything less than 0 \n",
+    "            is considered an outlier\n",
+    "\n",
+    "\n",
+    "    \"\"\"\n",
+    "    # Record original n_samples\n",
+    "    n_samples = data.shape[0]\n",
+    "\n",
+    "    # Change only numeric data\n",
+    "    numeric_cols = data.select_dtypes(include=['float64', 'int']).columns.tolist()\n",
+    "    numeric_data = data[numeric_cols]\n",
+    "    \n",
+    "    # Create anomaly scores for dataframe\n",
+    "    forest = IsolationForest().fit(numeric_data)\n",
+    "    scores = forest.decision_function(numeric_data)\n",
+    "\n",
+    "    # Filter out anomolous rows\n",
+    "    data = data[scores >= cutoff]\n",
+    "\n",
+    "    # Print % of data removed\n",
+    "    print( (scores < cutoff).sum() / n_samples)\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "# Change only numeric data\n",
+    "numeric_cols = df.select_dtypes(include=['float64', 'int']).columns.tolist()\n",
+    "numeric_data = df[numeric_cols]\n",
+    "\n",
+    "# Create anomaly scores for dataframe\n",
+    "forest = IsolationForest().fit(numeric_data)\n",
+    "scores = forest.decision_function(numeric_data)\n",
+    "print((scores < 0).sum())\n",
+    "\n",
+    "\n",
+    "# Filter out anomolous rows\n",
+    "data = df[scores >= -0.01]\n",
+    "\n",
+    "print(data.shape, df.shape)"
+   ]
   }
  ],
  "metadata": {
