--- a/Henry_workspace/Pipeline.ipynb
+++ b/Henry_workspace/Pipeline.ipynb
@@ -37,6 +37,7 @@
     "import wbgapi as wb\n",
     "import pandas as pd\n",
     "from sklearn.impute import KNNImputer\n",
+    "from sklearn.ensemble import IsolationForest\n",
     "\n",
     "class DataPipeline():\n",
     "\n",
@@ -68,10 +69,47 @@
     "        touched.\n",
     "        \n",
     "        '''\n",
+    "        # Alter only numerical data\n",
     "        numeric_cols = data.select_dtypes(include=['float64', 'int']).columns.tolist()\n",
     "        numeric_data = data[numeric_cols]\n",
+    "\n",
+    "        # Imupte data\n",
     "        imputed_data = KNNImputer().fit_transform(numeric_data)\n",
+    "\n",
+    "        # Fill in original dataframe\n",
     "        data[numeric_cols] = imputed_data\n",
+    "        \n",
+    "        return data\n",
+    "    \n",
+    "    def remove_outliers(self, data: pd.DataFrame, cutoff: float = 0.0) -> pd.DataFrame:\n",
+    "        \"\"\"Remove outliers with an isolation forest\n",
+    "        \n",
+    "        Only numerical data is modified. All NaNs must already be removed.\n",
+    "\n",
+    "        Parameters:\n",
+    "        ----------\n",
+    "            data  (pd.DataFrame): dataframe to alter\n",
+    "            cutoff (float): Cutoff for anomaly scores. Typically, anything less than 0 \n",
+    "                is considered an outlier\n",
+    "\n",
+    "\n",
+    "        \"\"\"\n",
+    "        # Record original n_samples\n",
+    "        n_samples = data.shape[0]\n",
+    "\n",
+    "        # Change only numeric data\n",
+    "        numeric_cols = data.select_dtypes(include=['float64', 'int']).columns.tolist()\n",
+    "        numeric_data = data[numeric_cols]\n",
+    "        \n",
+    "        # Create anomaly scores for dataframe\n",
+    "        forest = IsolationForest().fit(numeric_data)\n",
+    "        scores = forest.decision_function(numeric_data)\n",
+    "\n",
+    "        # Filter out anomolous rows\n",
+    "        data = data[scores >= cutoff]\n",
+    "\n",
+    "        # Print % of data removed\n",
+    "        print( (scores < cutoff).sum() / n_samples)\n",
     "\n",
     "        return data\n",
     "    \n",
@@ -101,9 +139,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
