Linear Regressor predictions

--- a/Henry_workspace/Pipeline.ipynb
+++ b/Henry_workspace/Pipeline.ipynb
@@ -38,6 +38,7 @@
     "import pandas as pd\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "class DataPipeline():\n",
     "\n",
@@ -78,7 +79,7 @@
     "\n",
     "        # Fill in original dataframe\n",
     "        data[numeric_cols] = imputed_data\n",
-    "        \n",
+    "\n",
     "        return data\n",
     "    \n",
     "    def remove_outliers(self, data: pd.DataFrame, cutoff: float = 0.0) -> pd.DataFrame:\n",
@@ -113,7 +114,30 @@
     "\n",
     "        return data\n",
     "    \n",
-    "    \n",
+    "    def scale_to_standard(self, data: pd.DataFrame) -> pd.DataFrame:\n",
+    "        \"\"\"Standardize features by making the mean 0 and the variance 1\n",
+    "        \n",
+    "        Only numerical data is modified. All NaNs must already be removed.\n",
+    "\n",
+    "        Parameters:\n",
+    "        ----------\n",
+    "            data  (pd.DataFrame): dataframe to alter\n",
+    "\n",
+    "        \"\"\"\n",
+    "        # Change only numeric data\n",
+    "        numeric_cols = data.select_dtypes(include=['float64', 'int']).columns.tolist()\n",
+    "        numeric_data = data[numeric_cols]\n",
+    "        \n",
+    "        # Scale Data\n",
+    "        scaler = StandardScaler().fit(numeric_data)\n",
+    "        scaled_data = scaler.transform(numeric_data)\n",
+    "\n",
+    "        # Scale original data\n",
+    "        data.loc[:, numeric_cols] = scaled_data\n",
+    "\n",
+    "        return data\n",
+    "        \n",
+    "        \n",
     "\n",
     "dp = DataPipeline(['NY.GDP.PCAP.CD', 'SP.POP.TOTL'], 2022)\n",
     "data = dp.get_data()\n",
@@ -133,13 +157,6 @@
     "\n",
     "print(data.isna().sum())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
