--- a/Henry_workspace/clean_data.ipynb
+++ b/Henry_workspace/clean_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,6 +11,7 @@
     "import pandas as pd\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import numpy as np"
    ]
   },
@@ -87,15 +88,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "236\n",
-      "(2674, 22) (2848, 22)\n"
+      "219\n",
+      "(2677, 22) (2848, 22)\n",
+      "       Country    Year      Status  Life expectancy   Adult Mortality  \\\n",
+      "1  Afghanistan  2014.0  Developing              59.9            271.0   \n",
+      "2  Afghanistan  2013.0  Developing              59.9            268.0   \n",
+      "3  Afghanistan  2012.0  Developing              59.5            272.0   \n",
+      "4  Afghanistan  2011.0  Developing              59.2            275.0   \n",
+      "5  Afghanistan  2010.0  Developing              58.8            279.0   \n",
+      "\n",
+      "   infant deaths  Alcohol  percentage expenditure  Hepatitis B  Measles   ...  \\\n",
+      "1           64.0     0.01               73.523582         62.0     492.0  ...   \n",
+      "2           66.0     0.01               73.219243         64.0     430.0  ...   \n",
+      "3           69.0     0.01               78.184215         67.0    2787.0  ...   \n",
+      "4           71.0     0.01                7.097109         68.0    3013.0  ...   \n",
+      "5           74.0     0.01               79.679367         66.0    1989.0  ...   \n",
+      "\n",
+      "   Polio  Total expenditure  Diphtheria    HIV/AIDS         GDP  Population  \\\n",
+      "1   58.0               8.18         62.0        0.1  612.696514    327582.0   \n",
+      "2   62.0               8.13         64.0        0.1  631.744976  31731688.0   \n",
+      "3   67.0               8.52         67.0        0.1  669.959000   3696958.0   \n",
+      "4   68.0               7.87         68.0        0.1   63.537231   2978599.0   \n",
+      "5   66.0               9.20         66.0        0.1  553.328940   2883167.0   \n",
+      "\n",
+      "    thinness  1-19 years   thinness 5-9 years  \\\n",
+      "1                   17.5                 17.5   \n",
+      "2                   17.7                 17.7   \n",
+      "3                   17.9                 18.0   \n",
+      "4                   18.2                 18.2   \n",
+      "5                   18.4                 18.4   \n",
+      "\n",
+      "   Income composition of resources  Schooling  \n",
+      "1                            0.476       10.0  \n",
+      "2                            0.470        9.9  \n",
+      "3                            0.463        9.8  \n",
+      "4                            0.454        9.5  \n",
+      "5                            0.448        9.2  \n",
+      "\n",
+      "[5 rows x 22 columns]\n"
      ]
     }
    ],
@@ -148,7 +185,93 @@
     "# Filter out anomolous rows\n",
     "data = df[scores >= -0.01]\n",
     "\n",
-    "print(data.shape, df.shape)"
+    "print(data.shape, df.shape)\n",
+    "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Country      Year      Status  Life expectancy   Adult Mortality  \\\n",
+      "1  Afghanistan  1.399382  Developing         -1.106250         0.968508   \n",
+      "2  Afghanistan  1.180411  Developing         -1.106250         0.942456   \n",
+      "3  Afghanistan  0.961441  Developing         -1.150839         0.977192   \n",
+      "4  Afghanistan  0.742471  Developing         -1.184281         1.003243   \n",
+      "5  Afghanistan  0.523500  Developing         -1.228870         1.037979   \n",
+      "\n",
+      "   infant deaths   Alcohol  percentage expenditure  Hepatitis B  Measles   \\\n",
+      "1       1.584903 -1.164872               -0.350119    -0.944814 -0.142447   \n",
+      "2       1.649585 -1.164872               -0.350292    -0.853639 -0.156397   \n",
+      "3       1.746609 -1.164872               -0.347476    -0.716877  0.373958   \n",
+      "4       1.811291 -1.164872               -0.387785    -0.671290  0.424811   \n",
+      "5       1.908314 -1.164872               -0.346628    -0.762464  0.194398   \n",
+      "\n",
+      "   ...     Polio  Total expenditure  Diphtheria    HIV/AIDS       GDP  \\\n",
+      "1  ... -1.212368           0.916551    -1.008999  -0.332264 -0.477714   \n",
+      "2  ... -1.027250           0.895906    -0.917541  -0.332264 -0.476187   \n",
+      "3  ... -0.795852           1.056936    -0.780354  -0.332264 -0.473124   \n",
+      "4  ... -0.749573           0.788553    -0.734625  -0.332264 -0.521726   \n",
+      "5  ... -0.842132           1.337705    -0.826083  -0.332264 -0.482472   \n",
+      "\n",
+      "   Population   thinness  1-19 years   thinness 5-9 years  \\\n",
+      "1   -0.393914               3.296944             3.235553   \n",
+      "2    1.274763               3.348071             3.285854   \n",
+      "3   -0.214880               3.399197             3.361307   \n",
+      "4   -0.253050               3.475887             3.411608   \n",
+      "5   -0.258121               3.527014             3.461909   \n",
+      "\n",
+      "   Income composition of resources  Schooling  \n",
+      "1                        -0.767674  -0.634681  \n",
+      "2                        -0.796977  -0.665420  \n",
+      "3                        -0.831164  -0.696159  \n",
+      "4                        -0.875119  -0.788376  \n",
+      "5                        -0.904423  -0.880592  \n",
+      "\n",
+      "[5 rows x 22 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def scale_standard(self, data: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Standardize features by making the mean 0 and the variance 1\n",
+    "    \n",
+    "    Only numerical data is modified. All NaNs must already be removed.\n",
+    "\n",
+    "    Parameters:\n",
+    "    ----------\n",
+    "        data  (pd.DataFrame): dataframe to alter\n",
+    "\n",
+    "    \"\"\"# Change only numeric data\n",
+    "    numeric_cols = data.select_dtypes(include=['float64', 'int']).columns.tolist()\n",
+    "    numeric_data = data[numeric_cols]\n",
+    "    \n",
+    "    # Scale Data\n",
+    "    scaler = StandardScaler().fit(numeric_data)\n",
+    "    scaled_data = scaler.transform(numeric_data)\n",
+    "\n",
+    "    # Scale original data\n",
+    "    data.loc[:, numeric_cols] = scaled_data\n",
+    "\n",
+    "    return data\n",
+    "\n",
+    "# Change only numeric data\n",
+    "numeric_cols = data.select_dtypes(include=['float64', 'int']).columns.tolist()\n",
+    "numeric_data = data[numeric_cols]\n",
+    "\n",
+    "# Scale Data\n",
+    "scaler = StandardScaler().fit(numeric_data)\n",
+    "scaled_data = scaler.transform(numeric_data)\n",
+    "\n",
+    "# Scale original data\n",
+    "data.loc[:, numeric_cols] = scaled_data\n",
+    "\n",
+    "print(data.head())"
    ]
   }
  ],
