--- a/src_code/final_nb.ipynb
+++ b/src_code/final_nb.ipynb
@@ -408,7 +408,7 @@
     "        self.merged = pd.merge(world, self.df, on='ISO_A3')\n",
     "        self.no_data = world[~world['ISO_A3'].isin(self.df['ISO_A3'])]\n",
     "\n",
-    "    def plot(self, col_name, ax=None, year=None, title=None, save_img:bool=False, img_name:str='fig.pdf') -> None:\n",
+    "    def plot(self, col_name, ax=None, year=None, title=None, save_img:bool=False, vmin:float=None, vmax:float=None, img_name:str='fig.pdf') -> None:\n",
     "        '''\n",
     "        Plots the data from the specified column\n",
     "\n",
@@ -431,7 +431,7 @@
     "            title = col_name\n",
     "\n",
     "        # Plot the data and color missing countries grey\n",
-    "        res = df.plot(column=col_name, edgecolor=\"black\", linewidth=0.2, ax=ax, legend=True, legend_kwds={'aspect': 30, 'shrink': 0.9})\n",
+    "        df.plot(column=col_name, edgecolor=\"black\", linewidth=0.2, ax=ax, legend=True, vmin=vmin, vmax=vmax, legend_kwds={'label': 'Happiness Score', 'aspect': 30, 'shrink': 0.8})\n",
     "        self.no_data.plot(ax=ax, edgecolor=\"grey\", linewidth=0.2, color='lightgrey', legend=True)\n",
     "        \n",
     "        # Format the plot\n",
