--- a/src_code/final_nb.ipynb
+++ b/src_code/final_nb.ipynb
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Define necessary classes and functions"
+    "# Define WorldBank Pipeline"
    ]
   },
   {
@@ -290,6 +290,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define Plotter for Happiness v. GDP"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -369,6 +376,13 @@
     "    ax.legend(handles=custom_points, loc=\"lower right\", fontsize=6)\n",
     "    ax.tick_params(axis='both', which='major', labelsize=6)\n",
     "    ax.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define ```GeoPlotter``` for worldmap"
    ]
   },
   {
@@ -468,6 +482,13 @@
     "            frames=sorted(set(self.df['Year'])),\n",
     "            interval=self.df['Year'].max() - self.df['Year'].min() / 10)\n",
     "        ani.save(video_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define ```FeatureSeparator``` to get factors on happiness"
    ]
   },
   {
@@ -601,7 +622,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering & Extraction"
+    "# Define ```engineering``` to perform feature engineering & extraction"
    ]
   },
   {
@@ -797,7 +818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Class for making ML Models"
+    "# Define ```Model``` Class for making ML Models"
    ]
   },
   {
@@ -2038,6 +2059,13 @@
     "\n",
     "        joblib.dump(self.model, path_to_model)\n",
     "        print(\"Model saved to \"+path_to_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define ```regression``` to make regressors"
    ]
   },
   {
